--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "server05.js",
   "devDependencies": {},
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server05.js"
   },
   "author": "",
